RESOLVED FIXED304645
Fix Objective-C leaks caused by missing -dealloc and missing -release
https://bugs.webkit.org/show_bug.cgi?id=304645
Summary Fix Objective-C leaks caused by missing -dealloc and missing -release
David Kilzer (:ddkilzer)
Reported 2025-12-23 08:34:15 PST
Fix Objective-C leaks caused by missing -dealloc and missing -release. ``` Source/WebKit/UIProcess/mac/_WKCaptionStyleMenuControllerMac.mm:53:1: warning: 'WKCaptionStyleMenuController' lacks a 'dealloc' instance method but must release '_savedActiveProfileID' [osx.cocoa.Dealloc] 53 | @implementation WKCaptionStyleMenuController | ^ 1 warning generated. Source/WebKit/UIProcess/API/Cocoa/_WKAuthenticationExtensionsClientInputs.mm:34:5: warning: The '_eval' ivar in '_WKAuthenticationExtensionsClientInputs' was copied by a synthesized property but not released before '[super dealloc]' [osx.cocoa.Dealloc] 34 | [super dealloc]; | ^~~~~~~~~~~~~~~ Source/WebKit/UIProcess/API/Cocoa/_WKAuthenticationExtensionsClientInputs.mm:34:5: warning: The '_evalByCredential' ivar in '_WKAuthenticationExtensionsClientInputs' was copied by a synthesized property but not released before '[super dealloc]' [osx.cocoa.Dealloc] 34 | [super dealloc]; | ^~~~~~~~~~~~~~~ Source/WebKit/UIProcess/API/Cocoa/_WKAuthenticationExtensionsClientInputs.mm:34:5: warning: The '_largeBlob' ivar in '_WKAuthenticationExtensionsClientInputs' was copied by a synthesized property but not released before '[super dealloc]' [osx.cocoa.Dealloc] 34 | [super dealloc]; | ^~~~~~~~~~~~~~~ 3 warnings generated. ```
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-23 08:34:29 PST
David Kilzer (:ddkilzer)
Comment 2 2025-12-23 12:31:11 PST
EWS
Comment 3 2026-01-08 21:20:57 PST
Committed 305337@main (fd984eb67bc8): <https://commits.webkit.org/305337@main> Reviewed commits have been landed. Closing PR #55836 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.