Fix Objective-C leaks caused by missing -dealloc and missing -release <https://bugs.webkit.org/show_bug.cgi?id=304645> <rdar://167089343>

Reviewed by Ryosuke Niwa.

* Source/WebKit/UIProcess/API/Cocoa/_WKAuthenticationExtensionsClientInputs.mm:
(-[_WKAuthenticationExtensionsClientInputs dealloc]):
- Release remaining three instance variables to fix leaks.
* Source/WebKit/UIProcess/Cocoa/_WKCaptionStyleMenuController.h:
(_WKCaptionStyleMenuController.delegate):
- Make delegate property nullable.
* Source/WebKit/UIProcess/Cocoa/_WKCaptionStyleMenuControllerInternal.h:
(_WKCaptionStyleMenuController.menu):
(_WKCaptionStyleMenuController.interaction):
- Make nullable so they may be released in -dealloc.
* Source/WebKit/UIProcess/mac/_WKCaptionStyleMenuControllerMac.mm:
(-[WKCaptionStyleMenuController dealloc]):
- Clear _delegate and release _savedActiveProfileID, _menu and
  _interaction instance variables to match ARC behavior.

Canonical link: https://commits.webkit.org/305337@main